--- a/resources/template.html
+++ b/resources/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {{/*
-Copyright 2014 Prometheus Team
+Copyright 2014 The Prometheus Authors
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
