--- a/resources/template.html
+++ b/resources/template.html
@@ -120,20 +120,20 @@ limitations under the License.
 				  </td>
 				  <td>
 				    {{with .Gauge}}
-				    {{.Value}}
+				    {{value .Value}}
 				    {{else}}
 				    {{with .Counter}}
-				    {{.Value}}
+				    {{value .Value}}
 				    {{else}}
 				    {{with .Untyped}}
-				    {{.Value}}
+				    {{value .Value}}
 				    {{else}}
 				    {{with .Summary}}
 				    <table class="table table-striped table-bordered table-hover">
 				      {{range .Quantile}}
 				      <tr>
 					<th scope="row">Quantile {{.Quantile}}</th>
-					<td>{{.Value}}</td>
+					<td>{{value .Value}}</td>
 				      </tr>
 				      {{end}}
 				      <tr>
@@ -142,7 +142,7 @@ limitations under the License.
 				      </tr>
 				      <tr>
 					<th scope="row">Sample Sum</th>
-					<td>{{.SampleSum}}</td>
+					<td>{{value .SampleSum}}</td>
 				      </tr>
 				    </table>
 				    {{end}}
