--- a/resources/template.html
+++ b/resources/template.html
@@ -145,7 +145,26 @@ limitations under the License.
 					<td>{{value .SampleSum}}</td>
 				      </tr>
 				    </table>
+				    {{else}}
+				    {{with .Histogram}}
+				    <table class="table table-striped table-bordered table-hover">
+				      {{range .Bucket}}
+				      <tr>
+					<th scope="row">Sample values &le; {{value .UpperBound}}</th>
+					<td>{{.CumulativeCount}}</td>
+				      </tr>
+				      {{end}}
+				      <tr>
+					<th scope="row">Total sample Count</th>
+					<td>{{.SampleCount}}</td>
+				      </tr>
+				      <tr>
+					<th scope="row">Sample Sum</th>
+					<td>{{value .SampleSum}}</td>
+				      </tr>
+				    </table>
 				    {{end}}
+    				    {{end}}
 				    {{end}}
 				    {{end}}
 				    {{end}}
