--- a/resources/template.html
+++ b/resources/template.html
@@ -19,11 +19,11 @@ limitations under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Prometheus Pushgateway</title>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="/functions.js"></script>
+    <script src="/static/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="/static/bootstrap-3.3.4-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/bootstrap-3.3.4-dist/css/bootstrap-theme.min.css">
+    <script src="/static/bootstrap-3.3.4-dist/js/bootstrap.min.js"></script>
+    <script src="/static/functions.js"></script>
 
     <style type="text/css">
       .cursor-pointer {
