--- a/resources/template.html
+++ b/resources/template.html
@@ -62,127 +62,112 @@ limitations under the License.
   <div class="container-fluid" id="metrics-div">
     {{$data := .}}
     <div class="panel-group" id="job-accordion">
-      {{range $job, $i2n := .MetricFamilies}}
-      {{$jCount := $data.Count}}
-      <div class="panel panel-default" id="job-panel-{{$jCount}}">
-	<div class="panel-heading cursor-pointer" data-toggle="collapse" data-parent="#job-accordion" data-target="#j-{{$jCount}}">
+      {{range .MetricGroups}}
+      {{$gCount := $data.Count}}
+      <div class="panel panel-default" id="group-panel-{{$gCount}}">
+	<div class="panel-heading cursor-pointer" data-toggle="collapse" data-parent="#job-accordion" data-target="#j-{{$gCount}}">
 	  <h4 class="panel-title">
 	    <span class="caret"></span>
-            <span class="label label-warning">job="{{$job}}"</span>
-	    <button class="btn btn-xs btn-danger pull-right" onclick="pushgateway.showJobModal('{{$job}}','job-panel-{{$jCount}}',event)">Delete Job</button>
+	    {{$metricGroup := .}}
+	    {{range $i, $ln := .SortedLabels}}
+	    <span class="label {{if eq $ln "job"}}label-warning{{else if eq $ln "instance"}}label-primary{{else}}label-info{{end}}">{{$ln}}="{{index $metricGroup.Labels $ln}}"</span>
+	    {{end}}
+	    <button class="btn btn-xs btn-danger pull-right" onclick="pushgateway.showDelModal({ {{range $i, $ln := .SortedLabels}}{{if $i}}, {{end}}'{{$ln}}': '{{index $metricGroup.Labels $ln}}'{{end}} }, 'group-panel-{{$gCount}}', event)">Delete Group</button>
 	  </h4>
 	</div>
-	<div id="j-{{$jCount}}" class="panel-collapse collapse">
+	<div id="j-{{$gCount}}" class="panel-collapse collapse">
 	  <div class="panel-body">
-	    <div class="panel-group" id="instance-accordion-{{$jCount}}">
-	      {{range $instance, $n2tmf := $i2n }}
-	      {{$iCount := $data.Count}}
-	      <div class="panel panel-default" id="instance-panel-{{$iCount}}">
-		<div class="panel-heading cursor-pointer" data-toggle="collapse" data-parent="#instance-accordion-{{$jCount}}" data-target="#i-{{$iCount}}">
+	    <div class="panel-group" id="metric-accordion-{{$gCount}}">
+	      {{range $name, $tmf := .Metrics }}
+	      {{$mCount := $data.Count}}
+	      <div class="panel panel-default">
+		<div class="panel-heading cursor-pointer" data-toggle="collapse" data-parent="#metric-accordion-{{$gCount}}" data-target="#m-{{$mCount}}">
 		  <h4 class="panel-title">
 		    <span class="caret"></span>
-		    <span class="label label-primary">instance="{{$instance}}"</span>
-		    <button class="btn btn-xs btn-danger pull-right" onclick="pushgateway.showInstanceModal('{{$job}}','{{$instance}}','instance-panel-{{$iCount}}',event)">Delete Instance</button>
+		    {{$name}}
+		    <span class="badge">{{$tmf.MetricFamily.GetHelp}}</span>
+		    <span class="label label-success">{{$tmf.MetricFamily.GetType}}</span>
+		    last pushed: {{$tmf.Timestamp}}
 		  </h4>
 		</div>
-		<div id="i-{{$iCount}}" class="panel-collapse collapse">
+		<div id="m-{{$mCount}}" class="panel-collapse collapse">
 		  <div class="panel-body">
-		    <div class="panel-group" id="metric-accordion-{{$iCount}}">
-		      {{range $name, $tmf := $n2tmf }}
-		      {{$mCount := $data.Count}}
-		      <div class="panel panel-default">
-			<div class="panel-heading cursor-pointer" data-toggle="collapse" data-parent="#metric-accordion-{{$iCount}}" data-target="#m-{{$mCount}}">
-			  <h4 class="panel-title">
-			    <span class="caret"></span>
-			      {{$name}}
-			      <span class="badge">{{$tmf.MetricFamily.GetHelp}}</span>
-			      <span class="label label-success">{{$tmf.MetricFamily.Type}}</span>
-			      last pushed: {{$tmf.Timestamp}}
-			  </h4>
-			</div>
-			<div id="m-{{$mCount}}" class="panel-collapse collapse">
-			  <div class="panel-body">
+		    <table class="table table-striped table-bordered table-hover">
+		      <thead>
+			<tr>
+			  <th>Labels</th>
+			  <th>Value</th>
+			  <th>Timestamp</th>
+			</tr>
+		      </thead>
+		      <tbody>
+			{{range $tmf.MetricFamily.Metric}}
+			<tr>
+			  <td>
+			    {{range .Label}}
+			    <span class="label {{if eq .GetName "job"}}label-warning{{else if eq .GetName "instance"}}label-primary{{else}}label-info{{end}}">{{.Name}}="{{.Value}}"</span>
+			    {{end}}
+			  </td>
+			  <td>
+			    {{with .Gauge}}
+			    {{value .Value}}
+			    {{else}}
+			    {{with .Counter}}
+			    {{value .Value}}
+			    {{else}}
+			    {{with .Untyped}}
+			    {{value .Value}}
+			    {{else}}
+			    {{with .Summary}}
 			    <table class="table table-striped table-bordered table-hover">
-			      <thead>
-				<tr>
-				  <th>Labels</th>
-				  <th>Value</th>
-				  <th>Timestamp</th>
-				</tr>
-			      </thead>
-			      <tbody>
-				{{range $tmf.MetricFamily.Metric}}
-				<tr>
-				  <td>
-				    {{range .Label}}
-				    <span class="label {{if eq .GetName "job"}}label-warning{{else if eq .GetName "instance"}}label-primary{{else}}label-info{{end}}">{{.Name}}="{{.Value}}"</span>
-				    {{end}}
-				  </td>
-				  <td>
-				    {{with .Gauge}}
-				    {{value .Value}}
-				    {{else}}
-				    {{with .Counter}}
-				    {{value .Value}}
-				    {{else}}
-				    {{with .Untyped}}
-				    {{value .Value}}
-				    {{else}}
-				    {{with .Summary}}
-				    <table class="table table-striped table-bordered table-hover">
-				      {{range .Quantile}}
-				      <tr>
-					<th scope="row">Quantile {{.Quantile}}</th>
-					<td>{{value .Value}}</td>
-				      </tr>
-				      {{end}}
-				      <tr>
-					<th scope="row">Sample Count</th>
-					<td>{{.SampleCount}}</td>
-				      </tr>
-				      <tr>
-					<th scope="row">Sample Sum</th>
-					<td>{{value .SampleSum}}</td>
-				      </tr>
-				    </table>
-				    {{else}}
-				    {{with .Histogram}}
-				    <table class="table table-striped table-bordered table-hover">
-				      {{range .Bucket}}
-				      <tr>
-					<th scope="row">Sample values &le; {{value .UpperBound}}</th>
-					<td>{{.CumulativeCount}}</td>
-				      </tr>
-				      {{end}}
-				      <tr>
-					<th scope="row">Total sample Count</th>
-					<td>{{.SampleCount}}</td>
-				      </tr>
-				      <tr>
-					<th scope="row">Sample Sum</th>
-					<td>{{value .SampleSum}}</td>
-				      </tr>
-				    </table>
-				    {{end}}
-    				    {{end}}
-				    {{end}}
-				    {{end}}
-				    {{end}}
-				  </td>
-				  <td>
-				    {{if .TimestampMs}}
-				    {{$t := .TimestampMs | $data.FormatTimestamp}}{{$t}} {{/* Indirection via $t needed. Bug in template/html? */}}
-				    {{end}}
-				  </td>
-				</tr>
-				{{end}}
-			      </tbody>
+			      {{range .Quantile}}
+			      <tr>
+				<th scope="row">Quantile {{.Quantile}}</th>
+				<td>{{value .Value}}</td>
+			      </tr>
+			      {{end}}
+			      <tr>
+				<th scope="row">Sample Count</th>
+				<td>{{.SampleCount}}</td>
+			      </tr>
+			      <tr>
+				<th scope="row">Sample Sum</th>
+				<td>{{value .SampleSum}}</td>
+			      </tr>
 			    </table>
-			  </div>
-			</div>
-		      </div>
-		      {{end}}
-		    </div>
+			    {{else}}
+			    {{with .Histogram}}
+			    <table class="table table-striped table-bordered table-hover">
+			      {{range .Bucket}}
+			      <tr>
+				<th scope="row">Sample values &le; {{value .UpperBound}}</th>
+				<td>{{.CumulativeCount}}</td>
+			      </tr>
+			      {{end}}
+			      <tr>
+				<th scope="row">Total sample Count</th>
+				<td>{{.SampleCount}}</td>
+			      </tr>
+			      <tr>
+				<th scope="row">Sample Sum</th>
+				<td>{{value .SampleSum}}</td>
+			      </tr>
+			    </table>
+			    {{end}}
+    			    {{end}}
+			    {{end}}
+			    {{end}}
+			    {{end}}
+			  </td>
+			  <td>
+			    {{if .TimestampMs}}
+			    {{$t := .TimestampMs | $data.FormatTimestamp}}{{$t}} {{/* Indirection via $t needed. Bug in template/html? */}}
+			    {{end}}
+			  </td>
+			</tr>
+			{{end}}
+		      </tbody>
+		    </table>
 		  </div>
 		</div>
 	      </div>
@@ -240,39 +225,20 @@ limitations under the License.
     </footer>
   </div>
 
-  <!-- job modal -->
-  <div id="del-job-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="del-job-header" aria-hidden="true">
+  <!-- del modal -->
+  <div id="del-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="del-header" aria-hidden="true">
     <div class="modal-dialog modal-sm">
       <div class="modal-content">
 	<div class="modal-header">
 	  <button type="button" class="close" data-dismiss="modal">&times;</button>
-	  <h3 id="del-job-header">Deletion Confirmation</h3>
+	  <h3 id="del-header">Deletion Confirmation</h3>
 	</div>
 	<div class="modal-body">
-	  <p id="del-job-modal-msg"><!-- To be filled dynamically. --></p>
+	  <p id="del-modal-msg"><!-- To be filled dynamically. --></p>
 	</div>
 	<div class="modal-footer">
 	  <button class="btn" data-dismiss="modal">Cancel</button>
-	  <button class="btn btn-primary btn-danger" onclick="pushgateway.deleteJob()">Delete</button>
-	</div>
-      </div>
-    </div>
-  </div>
-  
-  <!-- instance modal -->
-  <div id="del-instance-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="del-instance-header" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-	<div class="modal-header">
-	  <button type="button" class="close" data-dismiss="modal">&times;</button>
-	  <h3 id="del-instance-header">Deletion Confirmation</h3>
-	</div>
-	<div class="modal-body">
-	  <p id="del-instance-modal-msg"><!-- To be filled dynamically. --></p>
-	</div>
-	<div class="modal-footer">
-	  <button class="btn" data-dismiss="modal">Cancel</button>
-	  <button class="btn btn-primary btn-danger" onclick="pushgateway.deleteInstance()">Delete</button>
+	  <button class="btn btn-primary btn-danger" onclick="pushgateway.deleteGroup()">Delete</button>
 	</div>
       </div>
     </div>
