--- a/resources/template.html
+++ b/resources/template.html
@@ -105,34 +105,34 @@ limitations under the License.
 			<tr>
 			  <td>
 			    {{range .Label}}
-			    <span class="label {{if eq .GetName "job"}}label-warning{{else if eq .GetName "instance"}}label-primary{{else}}label-info{{end}}">{{.Name}}="{{.Value}}"</span>
+			    <span class="label {{if eq .GetName "job"}}label-warning{{else if eq .GetName "instance"}}label-primary{{else}}label-info{{end}}">{{.Name}}="{{.GetValue}}"</span>
 			    {{end}}
 			  </td>
 			  <td>
 			    {{with .Gauge}}
-			    {{value .Value}}
+			    {{value .GetValue}}
 			    {{else}}
 			    {{with .Counter}}
-			    {{value .Value}}
+			    {{value .GetValue}}
 			    {{else}}
 			    {{with .Untyped}}
-			    {{value .Value}}
+			    {{value .GetValue}}
 			    {{else}}
 			    {{with .Summary}}
 			    <table class="table table-striped table-bordered table-hover">
 			      {{range .Quantile}}
 			      <tr>
-				<th scope="row">Quantile {{.Quantile}}</th>
-				<td>{{value .Value}}</td>
+				<th scope="row">Quantile {{.GetQuantile}}</th>
+				<td>{{value .GetValue}}</td>
 			      </tr>
 			      {{end}}
 			      <tr>
 				<th scope="row">Sample Count</th>
-				<td>{{.SampleCount}}</td>
+				<td>{{.GetSampleCount}}</td>
 			      </tr>
 			      <tr>
 				<th scope="row">Sample Sum</th>
-				<td>{{value .SampleSum}}</td>
+				<td>{{value .GetSampleSum}}</td>
 			      </tr>
 			    </table>
 			    {{else}}
@@ -140,17 +140,17 @@ limitations under the License.
 			    <table class="table table-striped table-bordered table-hover">
 			      {{range .Bucket}}
 			      <tr>
-				<th scope="row">Sample values &le; {{value .UpperBound}}</th>
-				<td>{{.CumulativeCount}}</td>
+				<th scope="row">Sample values &le; {{value .GetUpperBound}}</th>
+				<td>{{.GetCumulativeCount}}</td>
 			      </tr>
 			      {{end}}
 			      <tr>
 				<th scope="row">Total sample Count</th>
-				<td>{{.SampleCount}}</td>
+				<td>{{.GetSampleCount}}</td>
 			      </tr>
 			      <tr>
 				<th scope="row">Sample Sum</th>
-				<td>{{value .SampleSum}}</td>
+				<td>{{value .GetSampleSum}}</td>
 			      </tr>
 			    </table>
 			    {{end}}
