Point at community page rather than dev list

--- a/resources/template.html
+++ b/resources/template.html
@@ -218,8 +218,8 @@ limitations under the License.
     <hr class="clear-top">
     <footer>
       <p>
-        Code: <a href="https://github.com/prometheus/pushgateway">prometheus/pushgateway</a>
-        Contact: <a href="mailto:prometheus-developers@googlegroups.com">prometheus-developers</a>
+        <a href="https://github.com/prometheus/pushgateway">Code</a>
+        <a href="https://prometheus.io/community/">Community</a>
         © Prometheus Authors 2014
       </p>
     </footer>
