Allow restoring from the legacy format
At the same time, remove the previous legacy format. Nobody should use
it anymore by now. It is very old, and usage of the newer versions
would have converted it anyway (like now, with the new legacy and the
new new format).

Signed-off-by: beorn7 <beorn@soundcloud.com>

--- a/resources/template.html
+++ b/resources/template.html
@@ -86,8 +86,8 @@ limitations under the License.
 		  <h4 class="panel-title">
 		    <span class="caret"></span>
 		    {{$name}}
-		    <span class="badge">{{$tmf.MetricFamily.GetHelp}}</span>
-		    <span class="label label-success">{{$tmf.MetricFamily.GetType}}</span>
+		    <span class="badge">{{$tmf.GetMetricFamily.GetHelp}}</span>
+		    <span class="label label-success">{{$tmf.GetMetricFamily.GetType}}</span>
 		    last pushed: {{$tmf.Timestamp}}
 		  </h4>
 		</div>
@@ -102,7 +102,7 @@ limitations under the License.
 			</tr>
 		      </thead>
 		      <tbody>
-			{{range $tmf.MetricFamily.Metric}}
+			{{range $tmf.GetMetricFamily.Metric}}
 			<tr>
 			  <td>
 			    {{range .Label}}
