--- a/resources/template.html
+++ b/resources/template.html
@@ -19,13 +19,11 @@ limitations under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Prometheus Pushgateway</title>
 
-    {{- $externalURL := index .Flags "web.external-url" }}
-    {{- $prefix := index .Flags "web.route-prefix" }}
-    <script src="{{join $externalURL $prefix "/static/jquery-2.1.4.min.js"}}"></script>
-    <link rel="stylesheet" href="{{join $externalURL $prefix "/static/bootstrap-3.3.4-dist/css/bootstrap.min.css"}}">
-    <link rel="stylesheet" href="{{join $externalURL $prefix "/static/bootstrap-3.3.4-dist/css/bootstrap-theme.min.css"}}">
-    <script src="{{join $externalURL $prefix "/static/bootstrap-3.3.4-dist/js/bootstrap.min.js"}}"></script>
-    <script src="{{join $externalURL $prefix "/static/functions.js"}}"></script>
+    <script src="{{.BaseURL}}/static/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="{{.BaseURL}}/static/bootstrap-3.3.4-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{.BaseURL}}/static/bootstrap-3.3.4-dist/css/bootstrap-theme.min.css">
+    <script src="{{.BaseURL}}/static/bootstrap-3.3.4-dist/js/bootstrap.min.js"></script>
+    <script src="{{.BaseURL}}/static/functions.js"></script>
 
     <style type="text/css">
       .cursor-pointer {
