--- a/resources/template.html
+++ b/resources/template.html
@@ -117,7 +117,7 @@ limitations under the License.
 			    {{value .GetValue}}
 			    {{else}}
 			    {{with .Summary}}
-			    <table class="table table-striped table-bordered table-hover">
+			    <table class="table table-striped table-bordered">
 			      {{range .Quantile}}
 			      <tr>
 				<th scope="row">Quantile {{.GetQuantile}}</th>
@@ -135,7 +135,7 @@ limitations under the License.
 			    </table>
 			    {{else}}
 			    {{with .Histogram}}
-			    <table class="table table-striped table-bordered table-hover">
+			    <table class="table table-striped table-bordered">
 			      {{range .Bucket}}
 			      <tr>
 				<th scope="row">Sample values &le; {{value .GetUpperBound}}</th>
@@ -174,7 +174,7 @@ limitations under the License.
   </div>
   <div class="container-fluid" id="status-div" style="display: none;">
     <h2>Runtime Information</h2>
-    <table class="table table-condensed table-bordered table-striped table-hover">
+    <table class="table table-condensed table-bordered table-striped">
       <tbody>
         <tr>
           <th>Started</th>
@@ -184,7 +184,7 @@ limitations under the License.
     </table>
 
     <h2>Build Information</h2>
-    <table class="table table-condensed table-bordered table-striped table-hover">
+    <table class="table table-condensed table-bordered table-striped">
       <tbody>
         {{range $key, $value := .BuildInfo}}
         <tr>
@@ -196,7 +196,7 @@ limitations under the License.
     </table>
 
     <h2>Startup Flags</h2>
-    <table class="table table-condensed table-bordered table-striped table-hover">
+    <table class="table table-condensed table-bordered table-striped">
       <tbody>
         {{range $key, $value := .Flags}}
         <tr>
