--- a/resources/template.html
+++ b/resources/template.html
@@ -19,15 +19,15 @@ limitations under the License.
     <meta name="robots" content="noindex,nofollow">
     <title>Prometheus Pushgateway</title>
 
-    <link rel="shortcut icon" href="{{.BaseURL}}/static/favicon.ico?v={{.BuildInfo.revision}}">
+    <link rel="shortcut icon" href="{{.PathPrefix}}/static/favicon.ico?v={{.BuildInfo.revision}}">
 
-    <script src="{{.BaseURL}}/static/jquery-3.4.1.min.js?v={{.BuildInfo.revision}}"></script>
-    <script src="{{.BaseURL}}/static/bootstrap-4.3.1-dist/js/bootstrap.min.js?v={{.BuildInfo.revision}}"></script>
-    <script src="{{.BaseURL}}/static/functions.js?v={{.BuildInfo.revision}}"></script>
+    <script src="{{.PathPrefix}}/static/jquery-3.4.1.min.js?v={{.BuildInfo.revision}}"></script>
+    <script src="{{.PathPrefix}}/static/bootstrap-4.3.1-dist/js/bootstrap.min.js?v={{.BuildInfo.revision}}"></script>
+    <script src="{{.PathPrefix}}/static/functions.js?v={{.BuildInfo.revision}}"></script>
 
-    <link type="text/css" rel="stylesheet" href="{{.BaseURL}}/static/bootstrap-4.3.1-dist/css/bootstrap.min.css?v={{.BuildInfo.revision}}">
-    <link type="text/css" rel="stylesheet" href="{{.BaseURL}}/static/prometheus.css?v={{.BuildInfo.revision}}">
-    <link type="text/css" rel="stylesheet" href="{{.BaseURL}}/static/bootstrap4-glyphicons/css/bootstrap-glyphicons.min.css?v={{.BuildInfo.revision}}">
+    <link type="text/css" rel="stylesheet" href="{{.PathPrefix}}/static/bootstrap-4.3.1-dist/css/bootstrap.min.css?v={{.BuildInfo.revision}}">
+    <link type="text/css" rel="stylesheet" href="{{.PathPrefix}}/static/prometheus.css?v={{.BuildInfo.revision}}">
+    <link type="text/css" rel="stylesheet" href="{{.PathPrefix}}/static/bootstrap4-glyphicons/css/bootstrap-glyphicons.min.css?v={{.BuildInfo.revision}}">
   </head>
 
   <body>
