--- a/resources/template.html
+++ b/resources/template.html
@@ -58,7 +58,7 @@ limitations under the License.
     {{$data := .}}
 	{{if eq (index .Flags "web.enable-admin-api") "true"}}
 	<div class="blank-card">
-		<button class="btn btn-xs btn-danger float-right {{if le (len .MetricGroups) 0}}disabled{{else}}active{{end}}" onclick="pushgateway.showDelAllModal()" id="del-all">Delete All <span class="badge badge-warning" id="del-all-counter">{{.MetricGroups | len}}</span> Groups</button>
+		<button class="btn btn-xs btn-danger float-right {{if le (len .MetricGroups) 0}}disabled{{end}}" onclick="pushgateway.showDelAllModal()" id="del-all">Delete All <span class="badge badge-warning" id="del-all-counter">{{.MetricGroups | len}}</span> Groups</button>
 	</div>
 	{{end}}
     <div class="accordion" id="job-accordion">
