--- a/resources/template.html
+++ b/resources/template.html
@@ -96,7 +96,7 @@ limitations under the License.
 			</h2>
 		</div>
 		<div id="m-{{$mCount}}" class="collapse" aria-labelledby="metric-panel-{{$mCount}}" data-parent="#metric-accordion-{{$gCount}}" >
-			<div class="card-body">
+			<div class="card-body" style="max-width: 100%; overflow-x: auto">
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
