--- a/resources/template.html
+++ b/resources/template.html
@@ -71,7 +71,7 @@ limitations under the License.
 					<span class="toggle-icon glyphicon glyphicon-collapse-down"></span>
 					{{- $metricGroup := .}}
 					{{- range $i, $ln := .SortedLabels}}
-					<span class="badge {{if eq $ln "job"}}badge-warning{{else if eq $ln "instance"}}badge-primary{{else}}badge-info{{end}}">{{$ln}}="{{index $metricGroup.Labels $ln}}"</span>
+					<span class="badge {{if eq $ln "job"}}badge-warning{{else if eq $ln "instance"}}badge-primary{{else if eq $ln "error"}}badge-danger{{else}}badge-info{{end}}">{{$ln}}="{{index $metricGroup.Labels $ln}}"</span>
 					{{- end}}
 				</button>
 				{{- if not $metricGroup.LastPushSuccess}}<span class="badge badge-pill badge-danger" role="alert">Last push failed!</span>{{end}}
