--- a/resources/template.html
+++ b/resources/template.html
@@ -70,7 +70,7 @@ limitations under the License.
 					<span class="toggle-icon glyphicon glyphicon-collapse-down"></span>
 					{{- $metricGroup := .}}
 					{{- range $i, $ln := .SortedLabels}}
-					<span class="badge {{if eq $ln "job"}}badge-warning{{else if eq $ln "instance"}}badge-primary{{else}}badge-info{{end}}">{{$ln | formatLabelName}}="{{index $metricGroup.Labels $ln}}"</span>
+					<span class="badge {{if eq $ln "job"}}badge-warning{{else if eq $ln "instance"}}badge-primary{{else}}badge-info{{end}}">{{formatLabelName $ln}}="{{index $metricGroup.Labels $ln}}"</span>
 					{{- end}}
 				</button>
 				{{- if not $metricGroup.LastPushSuccess}}<span class="badge badge-pill badge-danger" role="alert">Last push failed!</span>{{end}}
@@ -108,7 +108,7 @@ limitations under the License.
 	<tr>
 		<td>
 			{{- range .Label}}
-			<span class="badge {{if eq .GetName "job"}}badge-warning{{else if eq .GetName "instance"}}badge-primary{{else}}badge-info{{end}}">{{.Name | formatLabelName}}="{{.GetValue}}"</span>
+			<span class="badge {{if eq .GetName "job"}}badge-warning{{else if eq .GetName "instance"}}badge-primary{{else}}badge-info{{end}}">{{formatLabelName .Name}}="{{.GetValue}}"</span>
 			{{- end}}
 		</td>
 		<td>
